swiper overflow fixed

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -7,7 +7,7 @@
 .footer-list {
     display: flex;
     flex-direction: column;
-    gap: 2em;
+    gap: 1.5em;
     color: var(--branco);
 }
 
