--- a/styles/swiper.css
+++ b/styles/swiper.css
@@ -19,3 +19,7 @@
     border: 2px solid black;
     background: black !important;
 }
+
+.swiper-static {
+    overflow-x: hidden;
+}
